testing some validation

--- a/index.html
+++ b/index.html
@@ -79,5 +79,7 @@
             <button type="submit" id="submitBtn" disabled>Register</button>
         </form>
     </div>
+    
+    <script src="validation.js"></script>
 </body>
 </html>
