changed way the submit button worked (it wasn't)

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="error-message" id="passwordConfirm-error"></div>
             </div>
 
-            <button type="submit" id="submitBtn" disabled>Register</button>
+            <button type="submit" id="submitBtn">Register</button>
         </form>
     </div>
     
